<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/change_pwd_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/search_input_box"
        android:hint="@string/change_pwd_old_pwd"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/change_pwd_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/search_input_box"
        android:hint="@string/change_pwd_new_pwd"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/change_pwd_sure_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/search_input_box"
        android:hint="@string/change_pwd_sure_pwd"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/change_pwd_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/change_pwd_sure"
            android:textColor="@color/button_text_color"
            android:background="@drawable/button_left" />
        
        <View 
            android:layout_width="0.5dp"
            android:layout_height="48dp"
            android:background="@color/button_line"/>

        <Button
            android:id="@+id/change_pwd_cancle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/change_pwd_cancle" 
            android:textColor="@color/label_red"
            android:background="@drawable/button_right"/>
    </LinearLayout>

</LinearLayout>