<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/app_head_height"
    android:background="@drawable/app_head_bg" >
    <Button
        android:id="@+id/btn_back"
        android:layout_alignParentLeft="true"
        android:layout_width="100dp"
        android:padding="5dp"
        android:layout_height="match_parent"
        android:drawableLeft="@drawable/button_back"
        android:background="@drawable/app_head_bg"
        android:textSize="18sp"
        android:textColor="#fff"
        android:text="@string/btn_back" />
    <TextView
        android:id="@+id/btn_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:textColor="#fff"
        android:text="@string/app_head_title"/>
    <ImageButton
        android:id="@+id/app_category"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/description"
        android:background="#fff"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:src="@drawable/app_category"/>
    <!-- 
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_head_line_height"
        android:layout_alignParentBottom="true"
        android:background="@color/app_head_line_color"/>
         -->
</RelativeLayout>