<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingBottom="10dp"
        android:background="@drawable/signin_success_bcackground"
        >

        <ImageView
            android:id="@+id/tv_check_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:src="@drawable/signin_collected_image"/>

        <ProgressBar
            android:id="@+id/pb_updating"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_check_in"
            android:layout_alignTop="@+id/tv_check_in"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_check_in_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_check_in"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:text="@string/checkin_info_identified"
            android:textColor="#078eed"
            android:textSize="18dip"/>

        <TextView
            android:id="@+id/tv_check_in_time"
            android:layout_below="@+id/tv_check_in_status"
            android:layout_marginBottom="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#078eed"
            android:text="@string/checkin_calculating"
            android:textSize="15dip"/>

        <TextView
            android:id="@+id/tv_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/tv_check_in_time"
            android:background="#98a7b7"/>

        <Button
            android:id="@+id/btn_comfirm"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_below="@+id/tv_line"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/contact_list_button"
            android:text="@string/comfirm"
            android:textColor="#4e6278"/>
    </RelativeLayout>

</merge>